--- a/index.html
+++ b/index.html
@@ -129,19 +129,22 @@
     <section class="bg-light py-5" id="contact-section">
         <div class="container">
             <h2 class="text-center mb-4">Contáctanos</h2>
-            <form id="contact-form" class="mx-auto" style="max-width: 600px;">
+            <!-- <p>¿Tienes alguna pregunta o comentario? ¡Nos encantaría saber de ti! </p> -->
+            <!-- <p>Por favor, completa el formulario a continuación y nos pondremos en contacto contigo lo antes posible.</p> -->
+            <form action="https://formspree.io/f/mzzaonrl" method="post" autocomplete="on" id="contact-form" class="mx-auto" style="max-width: 600px;" >
                 <div class="mb-3">
                     <label for="name" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="name" required>
+                    <input type="text" class="form-control" id="name" placeholder="Ingrese su nombre" required>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Correo Electrónico</label>
-                    <input type="email" class="form-control" id="email" required>
+                    <input type="email" class="form-control" id="email" placeholder="Ingrese su correo electrónico" required>
                 </div>
                 <div class="mb-3">
                     <label for="message" class="form-label">Mensaje</label>
-                    <textarea class="form-control" id="message" rows="4" required></textarea>
+                    <textarea class="form-control" id="message" rows="4" placeholder="Ingrese su mensaje" required></textarea>
                 </div>
+                <input type="hidden" name="_redirect" value="./gracias.html">
                 <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
             </form>
         </div>
