--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -34,9 +34,16 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>Carrito de compras</h1>
+
+        <nav style="margin-bottom:20px;">
+            <a href="#" onclick="window.history.back(); return false;" style="display:inline-flex; align-items:center; gap:8px; color:var(--accent); text-decoration:none; font-size:14px;">
+            <span>← Volver</span>
+            </a>
+        </nav>
 
         <div id="cartRoot">
             <!-- contenido dinámico -->
@@ -44,77 +51,65 @@
     </div>
 
     <script>
-        // Busca una clave de carrito común en localStorage
-        const POSSIBLE_KEYS = ['carrito', 'cart', 'shoppingCart', 'shopping_cart', 'cartItems', 'items'];
+    // 1. Traer carrito (IDs) desde localStorage
+    function obtenerCarrito() {
+        return JSON.parse(localStorage.getItem("carrito")) || [];
+    }
 
-        function findCartKey() {
-            for (const key of POSSIBLE_KEYS) {
-                if (localStorage.getItem(key)) return key;
-            }
-            // intenta detectar un valor que parezca un arreglo de objetos
-            for (let i = 0; i < localStorage.length; i++) {
-                const key = localStorage.key(i);
-                const value = localStorage.getItem(key);
-                try {
-                    const parsed = JSON.parse(value);
-                    if (Array.isArray(parsed) && parsed.length && typeof parsed[0] === 'object') {
-                        return key;
-                    }
-                } catch (e) { /* no es JSON válido */ }
-            }
-            return null;
+    // 2. Guardar carrito
+    function guardarCarrito(c) {
+        localStorage.setItem("carrito", JSON.stringify(c));
+    }
+
+    // 3. Formatear moneda ARS
+    function formatCurrency(n) {
+        return new Intl.NumberFormat('es-AR', { style: 'currency', currency: 'ARS' }).format(n);
+    }
+
+    // 4. Obtener productos desde la API según IDs guardados
+    async function cargarProductosDelCarrito() {
+        const ids = obtenerCarrito();
+        if (!ids.length) return [];
+
+        const productos = [];
+
+        for (const id of ids) {
+            const res = await fetch(`https://fakestoreapi.com/products/${id}`);
+            const data = await res.json();
+
+            // Estructura uniforme
+            productos.push({
+                id: data.id,
+                title: data.title,
+                price: data.price,
+                img: data.image,
+                quantity: 1    // Default
+            });
         }
 
-        const cartKey = findCartKey();
-        function loadCart() {
-            if (!cartKey) return [];
-            try {
-                const parsed = JSON.parse(localStorage.getItem(cartKey));
-                return Array.isArray(parsed) ? parsed : [];
-            } catch {
-                return [];
-            }
-        }
+        return productos;
+    }
 
-        function saveCart(cart) {
-            if (!cartKey) {
-                // si no había clave, crea una nueva llamada 'carrito'
-                localStorage.setItem('carrito', JSON.stringify(cart));
-            } else {
-                localStorage.setItem(cartKey, JSON.stringify(cart));
-            }
-        }
+    // 5. Render del carrito
+    async function renderCart() {
+        const root = document.getElementById("cartRoot");
+        root.innerHTML = "";
 
-        function formatCurrency(n) {
-            try {
-                return new Intl.NumberFormat('es-AR', { style: 'currency', currency: 'ARS' }).format(n);
-            } catch {
-                return '$' + Number(n).toFixed(2);
-            }
-        }
+        const productos = await cargarProductosDelCarrito();
 
-        function createEmptyNode() {
-            const div = document.createElement('div');
-            div.className = 'empty';
-            div.innerHTML = `
-                <p>No hay productos en el carrito.</p>
-                <p class="muted">Agrega productos y se mostrarán aquí.</p>
+        if (!productos.length) {
+            root.innerHTML = `
+                <div class="empty">
+                    <p>No hay productos en el carrito.</p>
+                    <p class="muted">Agrega productos para verlos aquí.</p>
+                </div>
             `;
-            return div;
+            return;
         }
 
-        function renderCart() {
-            const root = document.getElementById('cartRoot');
-            root.innerHTML = '';
-            const cart = loadCart();
-
-            if (!cart.length) {
-                root.appendChild(createEmptyNode());
-                return;
-            }
-
-            const table = document.createElement('table');
-            table.innerHTML = `
+        // TABLA
+        let html = `
+            <table>
                 <thead>
                     <tr>
                         <th>Producto</th>
@@ -124,137 +119,103 @@
                         <th></th>
                     </tr>
                 </thead>
-                <tbody></tbody>
-            `;
-            const tbody = table.querySelector('tbody');
+                <tbody>
+        `;
 
-            cart.forEach((item, index) => {
-                // soporta diferentes nombres de campos
-                const title = item.title || item.name || item.nombre || 'Producto';
-                const price = Number(item.price ?? item.precio ?? item.unitPrice ?? item.cost) || 0;
-                const qty = Number(item.quantity ?? item.qty ?? item.cantidad) || 1;
-                const img = item.image || item.img || item.foto || '';
+        let total = 0;
 
-                const tr = document.createElement('tr');
-                tr.innerHTML = `
+        productos.forEach((p, index) => {
+            const subtotal = p.price * p.quantity;
+            total += subtotal;
+
+            html += `
+                <tr>
                     <td data-label="Producto">
-                        <div style="display:flex;gap:12px;align-items:center">
-                            <img class="thumb" src="${img ? escapeHtml(img) : placeholderDataUrl(title)}" alt="${escapeHtml(title)}"/>
-                            <div>
-                                <div style="font-weight:600">${escapeHtml(title)}</div>
-                                <div class="muted" style="font-size:13px">${escapeHtml(item.variant || item.sku || '')}</div>
-                            </div>
+                        <div style="display:flex; gap:12px; align-items:center">
+                            <img class="thumb" src="${p.img}" />
+                            <div><strong>${p.title}</strong></div>
                         </div>
                     </td>
-                    <td data-label="Precio">${formatCurrency(price)}</td>
+
+                    <td data-label="Precio">${formatCurrency(p.price)}</td>
+
                     <td data-label="Cantidad">
-                        <input class="qty" type="number" min="1" value="${qty}" data-index="${index}">
+                        <input class="qty" type="number" min="1" value="${p.quantity}" data-index="${index}">
                     </td>
-                    <td data-label="Subtotal">${formatCurrency(price * qty)}</td>
-                    <td data-label="">
-                        <div class="actions">
-                            <button class="btn ghost remove" data-index="${index}">Eliminar</button>
-                        </div>
+
+                    <td data-label="Subtotal">${formatCurrency(subtotal)}</td>
+
+                    <td>
+                        <button class="btn ghost remove" data-index="${index}">Eliminar</button>
                     </td>
-                `;
-                tbody.appendChild(tr);
-            });
+                </tr>
+            `;
+        });
 
-            // resumen y acciones
-            const summary = document.createElement('div');
-            summary.className = 'summary';
-            const total = cart.reduce((s, it) => {
-                const p = Number(it.price ?? it.precio ?? it.unitPrice ?? it.cost) || 0;
-                const q = Number(it.quantity ?? it.qty ?? it.cantidad) || 1;
-                return s + p * q;
-            }, 0);
-            const count = cart.reduce((s, it) => s + (Number(it.quantity ?? it.qty ?? it.cantidad) || 1), 0);
+        html += "</tbody></table>";
 
-            summary.innerHTML = `
+        // RESUMEN
+        html += `
+            <div class="summary">
                 <div>
-                    <div class="muted">Productos en el carrito: <strong>${count}</strong></div>
+                    <div class="muted">Total de productos: <strong>${productos.length}</strong></div>
                     <div class="total">Total: ${formatCurrency(total)}</div>
                 </div>
-                <div style="display:flex;gap:8px">
+
+                <div style="display:flex; gap:8px">
+                    <button id="backBtn" class="btn secondary">Volver</button>
                     <button id="clearBtn" class="btn secondary">Vaciar carrito</button>
                     <button id="checkoutBtn" class="btn">Finalizar compra</button>
                 </div>
-            `;
+            </div>
+        `;
 
-            root.appendChild(table);
-            root.appendChild(summary);
+        root.innerHTML = html;
 
-            // listeners
-            tbody.addEventListener('input', (e) => {
-                const el = e.target;
-                if (el.matches('.qty')) {
-                    const idx = Number(el.dataset.index);
-                    let val = parseInt(el.value, 10);
-                    if (Number.isNaN(val) || val < 1) val = 1;
-                    el.value = val;
-                    updateItemQuantity(idx, val);
-                }
+        // EVENTOS
+        document.querySelectorAll(".qty").forEach(input => {
+            input.addEventListener("input", e => {
+                let idx = e.target.dataset.index;
+                let val = parseInt(e.target.value);
+
+                if (isNaN(val) || val < 1) val = 1;
+
+                productos[idx].quantity = val;
+                renderCart(); // Re-render con subtotales actualizados
             });
+        });
 
-            tbody.addEventListener('click', (e) => {
-                const el = e.target;
-                if (el.matches('.remove')) {
-                    const idx = Number(el.dataset.index);
-                    removeItem(idx);
-                }
-            });
-
-            document.getElementById('clearBtn').addEventListener('click', () => {
-                if (!confirm('¿Desea vaciar el carrito?')) return;
-                saveCart([]);
+        document.querySelectorAll(".remove").forEach(btn => {
+            btn.addEventListener("click", e => {
+                let idx = e.target.dataset.index;
+                let ids = obtenerCarrito();
+                ids.splice(idx, 1);
+                guardarCarrito(ids);
                 renderCart();
             });
+        });
 
-            document.getElementById('checkoutBtn').addEventListener('click', () => {
-                // simulación simple
-                alert('Procediendo a finalizar la compra. Total: ' + formatCurrency(total));
-            });
-        }
+        document.getElementById("clearBtn").addEventListener("click", () => {
+            if (confirm("¿Vaciar carrito?")) {
+                localStorage.removeItem("carrito");
+                renderCart();
+            }
+        });
 
-        function updateItemQuantity(index, qty) {
-            const cart = loadCart();
-            if (!cart[index]) return;
-            // normaliza nombres
-            if ('quantity' in cart[index]) cart[index].quantity = qty;
-            else if ('qty' in cart[index]) cart[index].qty = qty;
-            else if ('cantidad' in cart[index]) cart[index].cantidad = qty;
-            else cart[index].quantity = qty;
-            saveCart(cart);
+        document.getElementById("checkoutBtn").addEventListener("click", () => {
+            alert("Compra finalizada con éxito. Total: " + formatCurrency(total));
+            localStorage.removeItem("carrito");
             renderCart();
-        }
+            window.history.back();
+        });
 
-        function removeItem(index) {
-            const cart = loadCart();
-            if (index < 0 || index >= cart.length) return;
-            cart.splice(index, 1);
-            saveCart(cart);
-            renderCart();
-        }
+        document.getElementById("backBtn").addEventListener("click", () => {
+            window.history.back();
+        });
+    }
 
-        // placeholder de imagen (SVG data URL) con iniciales
-        function placeholderDataUrl(text) {
-            const initials = (text || 'P').trim().split(' ').map(s => s[0]).slice(0,2).join('').toUpperCase();
-            const svg = `<svg xmlns='http://www.w3.org/2000/svg' width='120' height='120'><rect width='100%' height='100%' fill='#f1f5f9'/><text x='50%' y='50%' font-family='Arial, Helvetica, sans-serif' font-size='36' fill='#9aa7b9' dominant-baseline='middle' text-anchor='middle'>${escapeHtml(initials)}</text></svg>`;
-            return 'data:image/svg+xml;charset=UTF-8,' + encodeURIComponent(svg);
-        }
+    document.addEventListener("DOMContentLoaded", renderCart);
+</script>
 
-        // pequeña función de escape para insertar valores en atributos/HTML
-        function escapeHtml(str = '') {
-            return String(str)
-                .replaceAll('&', '&amp;')
-                .replaceAll('<', '&lt;')
-                .replaceAll('>', '&gt;')
-                .replaceAll('"', '&quot;')
-                .replaceAll("'", '&#39;');
-        }
-
-        // renderizar al cargar
-        document.addEventListener('DOMContentLoaded', renderCart);
-    </script>
 </body>
 </html>
