--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="./assets/img/icono2.jpg" alt="CompraloYa Logo" height="50" class="me-2 rounded">
+                    <img src="./assets/img/icono2.JPG" alt="CompraloYa Logo" height="50" class="me-2 rounded">
                     CompraloYa
                 </a>
 
@@ -35,13 +35,6 @@
                         <li class="nav-item"><a class="nav-link" href="#contact-section">Contacto</a></li>
                     </ul>
 
-                    <!-- <div class="cart-wrapper">
-                        <button class="btn-cart" id="view-cart-button" data-bs-toggle="modal"
-                            data-bs-target="#cartModal">
-                            <i class="fa fa-shopping-cart"></i>
-                            <span class="cart-badge" id="cart-count">0</span>
-                        </button>
-                    </div> -->
                     <div class="cart-wrapper">
                         <a href="./pages/carrito.html" class="btn-cart" id="view-cart-link">
 
@@ -51,9 +44,6 @@
 
                         </a>
                     </div>
-
-                    <!-- CONTADOR DE PRODUCTOS EN EL CARRITO -->
-                    <!-- <button id="vaciar-carrito">Vaciar Carrito</button> -->
 
                 </div>
             </nav>
@@ -231,10 +221,11 @@
         </div>
     </footer>
 
-    <script src="./js/js.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <script src="./js/js.js"></script>
 </body>
 
 </html>
